--- a/css/utils.css
+++ b/css/utils.css
@@ -5,7 +5,7 @@
     --font1:'Playfair Display', serif;
     --font2:'Ubuntu', sans-serif;
     --font3:'Delius Swash Caps', cursive;
-    --f-h-1:1.9vw;
+    --f-h-1:1.5vw;
     --f-h-2:1.3vw;
 }
 *{
@@ -13,4 +13,17 @@
     padding: 0px;
     color: azure;
 
+}
+.arrow {
+    border: solid black;
+    border-width: 0 3px 3px 0;
+    display: inline-block;
+    padding: 3px;
+}
+.down {
+    transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+}
+.t-a-l{
+    text-align: left;
 }
