--- a/css/style.css
+++ b/css/style.css
@@ -101,3 +101,34 @@ header ul li a:hover{
       rgba(0, 0, 0, 0)
     ) 1 100%;
 }
+
+#quote{
+    
+    font-family: var(--font3);
+    
+}
+
+.content{
+    /* background-color: blue; */
+    /* height: 30vw; */
+    display: flex;
+    /* flex-direction: row; */
+    flex-wrap: wrap;
+    /* align-items: center; */
+    /* justify-content: center; */
+    }
+
+    .box{
+        /* background-color: brown; */
+        
+        /* border: 2px solid black; */
+        /* border-radius: 50px; */
+        /* height: 100px; */
+        
+        width: 100%;
+        /* margin: 30px; */
+        
+        /* height: 25vw; */
+        /* width: 25vw; */
+        }
+        
