--- a/css/style.css
+++ b/css/style.css
@@ -25,10 +25,15 @@
 .btn{
     position: absolute;
     top: 49vh;
-    right: 50%;
+    right: 36%;
     z-index: 100;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-
+.btn:hover{
+    cursor:pointer;
+}
 
 
 
